<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:orientation="vertical">
    <!--Distribution network subpage, mainly for AP mode distribution network auxiliary page-->
    <RelativeLayout
        android:id="@+id/switch_wifi_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@mipmap/adddevice_ap_screen"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="194dp"
                    android:layout_marginStart="70dp"
                    android:id="@+id/tv_ap_ssid"
                    android:textColor="#1E1E1E"/>

            </FrameLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ap_connect_description"
                android:textColor="@color/colorNormal"
                android:layout_marginTop="@dimen/mg_16"
                android:gravity="center"
                android:textSize="@dimen/ts_14"/>

            <TextView
                android:id="@+id/add_device_tip_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/ap_connect_help"
                android:textSize="@dimen/ts_13"/>

        </LinearLayout>


        <Button
            android:id="@+id/tv_bottom_button"
            style="@style/Button.Normal"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/mg_16"
            android:layout_marginLeft="@dimen/mg_15"
            android:layout_marginRight="@dimen/mg_15"
            android:text="@string/ap_connect_go"
            android:textSize="@dimen/ts_15"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <!--Distribution network main page, including progress tips / distribution results tips and other information-->
    <TextView
        android:id="@+id/network_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_d0e1fd"
        android:gravity="center"
        android:padding="@dimen/mg_3"
        android:text="@string/network_time_out"
        android:textColor="@color/colorDark"
        android:textSize="@dimen/ts_14"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/ec_connecting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">
        <com.test2019.tyapp.longhuan.widget.CircularProgressBar
            android:id="@+id/circleView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/ec_connect_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/mg_28"
            android:gravity="center"
            android:text="@string/ez_connecting_devicei_note1"
            android:textColor="#626262"
            android:textSize="@dimen/ts_14"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/ez_connecting_device_note2"
            android:textColor="#626262"
            android:textSize="@dimen/ts_14"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        style="@style/Button.Normal"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:text="@string/device_next"
        android:textColor="@color/white"
        android:textSize="@dimen/ts_15"
        android:visibility="gone"/>

    <Button
        android:id="@+id/tv_share_button"
        style="@style/Button.Normal"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/btn_share_bg"
        android:gravity="center"
        android:text="@string/ez_status_share"
        android:textColor="#626262"
        android:textSize="@dimen/ts_15"
        android:visibility="gone"/>

    <Button
        android:id="@+id/tv_retry_button"
        style="@style/Button.Normal"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/mg_66"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:text="@string/retry"
        android:textColor="@color/white"
        android:textSize="@dimen/ts_15"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tv_add_device_contact_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/mg_16"
        android:gravity="center"
        android:text="@string/ap_error_phone"
        android:textColor="@color/color_626262"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tv_add_device_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/mg_20"
        android:drawablePadding="@dimen/mg_20"
        android:drawableTop="@mipmap/adddevice_ok"
        android:gravity="center"
        android:text="@string/ez_status_success"
        android:textColor="#61BA00"
        android:textSize="@dimen/ts_14"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/tv_device_init_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/config_device_init_tip"
        android:textColor="#ff4800"
        android:textSize="@dimen/ts_14"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/ll_failure_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_add_device_fail"
            android:layout_width="@dimen/wh_100"
            android:layout_height="@dimen/wh_100"
            android:layout_gravity="center"
            android:background="@drawable/wifi_background"
            android:scaleType="centerInside"/>

        <TextView
            android:id="@+id/tv_ec_find_search_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:paddingTop="@dimen/mg_24"
            android:text="@string/ap_error_description"
            android:textSize="@dimen/ts_14"/>
    </LinearLayout>

    <TextView android:id="@+id/tv_dev_find"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/mg_88"
        android:layout_marginStart="@dimen/mg_40"
        android:drawableStart="@mipmap/add_device_default_tip"
        android:drawablePadding="@dimen/mg_6"
        android:gravity="start"
        android:text="@string/add_device_find_dev"
        android:textColor="#9B9B9B"
        android:textSize="@dimen/ts_12"/>
    <TextView android:id="@+id/tv_bind_success"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/mg_68"
        android:layout_marginStart="@dimen/mg_40"
        android:drawableStart="@mipmap/add_device_default_tip"
        android:drawablePadding="@dimen/mg_6"
        android:gravity="start"
        android:text="@string/add_device_reg_cloud"
        android:textColor="#9B9B9B"
        android:textSize="@dimen/ts_12"/>
    <TextView android:id="@+id/tv_device_init"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/mg_48"
        android:layout_marginStart="@dimen/mg_40"
        android:drawableStart="@mipmap/add_device_default_tip"
        android:drawablePadding="@dimen/mg_6"
        android:gravity="start"
        android:text="@string/add_device_initialize"
        android:textColor="#9B9B9B"
        android:textSize="@dimen/ts_12"
        />

</FrameLayout>