<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background">
    <RelativeLayout
        android:id="@+id/rl_country_code"
        android:layout_width="@dimen/text_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/login_user_info"
        android:layout_marginBottom="@dimen/mg_16">
        <EditText
            android:id="@+id/login_country_code"
            android:hint="@string/hint_country_code"
            android:layout_width="@dimen/text_width"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/text_padding_start"
            android:paddingEnd="@dimen/text_padding_end"
            android:textColorHint="@color/text_grey"
            android:textColor="@color/text_white"
            android:textSize="@dimen/ts_18"
            android:singleLine="true"
            android:background="@android:color/transparent"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mg_5"
            android:layout_below="@+id/login_country_code"
            android:src="@mipmap/text_divider"/>
    </RelativeLayout>
    <EditText
        android:id="@+id/login_user_info"
        android:layout_width="@dimen/text_width"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_password"
        android:layout_centerHorizontal="true"
        android:paddingStart="@dimen/text_padding_start"
        android:paddingEnd="@dimen/text_padding_end"
        android:hint="@string/hint_user_info"
        android:textColorHint="@color/text_grey"
        android:textColor="@color/text_white"
        android:singleLine="true"
        android:textSize="@dimen/ts_18"
        android:background="@android:color/transparent"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mg_5"
        android:layout_below="@+id/login_user_info"
        android:src="@mipmap/text_divider"/>
    <RelativeLayout
        android:id="@+id/rl_password"
        android:layout_width="@dimen/text_width"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/mg_15"
        android:layout_marginRight="@dimen/mg_15"
        android:layout_marginTop="@dimen/mg_40">

        <EditText
            android:id="@+id/login_user_pass"
            android:hint="@string/hint_user_pass"
            android:layout_centerVertical="true"
            style="@style/text_password_input"/>

        <ImageButton
            android:id="@+id/login_password_switch"
            android:layout_width="@dimen/wh_20"
            android:layout_height="@dimen/wh_18"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/mg_16"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:src="@mipmap/password_off" />

    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_password"
        android:src="@mipmap/text_divider"/>

    <Button
        android:id="@+id/login_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/wh_23"
        android:layout_below="@+id/rl_password"
        android:layout_alignEnd="@+id/rl_password"
        android:layout_marginTop="@dimen/mg_14"
        android:paddingEnd="@dimen/mg_10"
        android:text="@string/btn_forgot_pass"
        android:textColor="@color/text_grey"
        style="?android:attr/borderlessButtonStyle"
        android:background="@android:color/transparent"
        android:textAllCaps="false"
        android:textSize="@dimen/ts_12"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/wh_220"
        android:layout_height="@dimen/wh_42"
        android:layout_below="@id/login_forgot_pass"
        android:layout_marginTop="@dimen/mg_36"
        android:layout_centerHorizontal="true"
        android:background="@color/btn_color"
        android:textColor="@color/text_white"
        android:text="@string/btn_sign_in" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/mg_10"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/ts_12"
            android:text="@string/hint_have_account"/>
        <Button
            android:id="@+id/go_to_signup"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/wh_23"
            android:text="@string/btn_sign_up"
            android:textColor="@color/text_white"
            style="?android:attr/borderlessButtonStyle"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="@dimen/ts_13"/>
    </LinearLayout>
</RelativeLayout>