<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/wh_50"
        android:background="@drawable/action_bar_background"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="@dimen/wh_60"
            android:layout_height="@dimen/wh_50"
            android:background="@drawable/back_button_bg"
            android:src="@drawable/ic_back"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="@dimen/wh_120"
        android:layout_height="@dimen/wh_120"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/txt_wifi_status"
        android:layout_marginBottom="@dimen/mg_50">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/wifi_background"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/wh_20"
            android:background="@mipmap/ic_wifi_status"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/txt_wifi_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btn_other_wifi"
        android:layout_marginBottom="@dimen/mg_10"
        android:gravity="center"
        android:text="@string/text_wifi_status"
        android:textColor="@color/text_white"
        android:textSize="@dimen/ts_18"/>
    <Button
        android:id="@+id/btn_other_wifi"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/wh_23"
        android:layout_centerInParent="true"
        android:text="@string/btn_use_other_wifi"
        android:textColor="@color/color_orange"
        style="?android:attr/borderlessButtonStyle"
        android:background="@android:color/transparent"
        android:textAllCaps="false"
        android:textSize="@dimen/ts_16"/>
    <RelativeLayout
        android:id="@+id/rl_wifi_password"
        android:layout_width="@dimen/text_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_other_wifi"
        android:layout_marginLeft="@dimen/mg_15"
        android:layout_marginRight="@dimen/mg_15"
        android:layout_marginTop="@dimen/mg_40">

        <EditText
            android:id="@+id/wifi_password"
            android:hint="@string/hint_wifi_password"
            android:layout_centerVertical="true"
            style="@style/text_password_input"/>

        <ImageButton
            android:id="@+id/wifi_password_switch"
            android:layout_width="@dimen/wh_20"
            android:layout_height="@dimen/wh_18"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/mg_16"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:src="@mipmap/password_off" />
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_wifi_password"
        android:src="@mipmap/text_divider"/>
    <Button
        android:id="@+id/btn_device_connect_setting"
        android:layout_width="@dimen/wh_220"
        android:layout_height="@dimen/wh_42"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/mg_50"
        android:layout_centerHorizontal="true"
        android:background="@color/btn_color"
        android:textColor="@color/text_white"
        android:text="@string/device_next" />
</RelativeLayout>