<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background">
    <EditText
        android:id="@+id/info_room_name"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/text_width"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/text_padding_start"
        android:paddingEnd="@dimen/text_padding_end"
        android:hint="@string/hint_room_name"
        android:textColorHint="@color/text_grey"
        android:textColor="@color/text_white"
        android:textSize="@dimen/ts_18"
        android:singleLine="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/mg_50"
        android:background="@android:color/transparent"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mg_5"
        android:layout_below="@+id/info_room_name"
        android:src="@mipmap/text_divider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/info_room_name"
        android:layout_above="@+id/btn_room_add"
        android:layout_marginStart="@dimen/mg_36"
        android:layout_marginEnd="@dimen/mg_36"
        android:layout_marginTop="@dimen/mg_20"
        android:layout_marginBottom="@dimen/mg_36"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/text_padding_start"
            android:paddingEnd="@dimen/text_padding_end"
            android:layout_marginBottom="@dimen/mg_10"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/ts_18"
            android:text="@string/text_room_type"/>
        <GridView
            android:id="@+id/grid_room_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/grid_border"
            android:scrollbars="none"
            android:paddingTop="@dimen/mg_20"
            android:paddingBottom="@dimen/mg_20"
            android:verticalSpacing="10dp"
            android:gravity="center"
            android:numColumns="3">
        </GridView>
    </LinearLayout>
    <Button
        android:id="@+id/btn_room_add"
        android:layout_width="@dimen/wh_220"
        android:layout_height="@dimen/wh_42"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/mg_50"
        android:layout_centerHorizontal="true"
        android:background="@color/btn_color"
        android:textColor="@color/text_white"
        android:text="@string/room_add" />
</RelativeLayout>